--- a/frontend/pages/static/styleHome.css
+++ b/frontend/pages/static/styleHome.css
@@ -10,7 +10,7 @@
   background-color: #f0f0f0;
   overflow: hidden;
   width: 1440px;
-  height: 1054px;
+  height: 1024px;
 }
 
 .home .overlap {
@@ -114,8 +114,8 @@
 .home .boot {
   position: absolute;
   width: 490px;
-  height: 562px;
-  top: 515px;
+  height: 545px;
+  top: 390px;
   left: 941px;
 }
 
@@ -162,4 +162,13 @@
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
+}
+
+.home .top-right-image {
+  position: absolute;
+  width: 123px; /* Set the width */
+  height: 123px; /* Set the height */
+  top: 0; /* Align to the top of the nearest positioned ancestor */
+  right: 0; /* Align to the right of the nearest positioned ancestor */
+  z-index: 10; /* Ensure it's above other elements if necessary */
 }
