--- a/frontend/pages/static/stylePage1.css
+++ b/frontend/pages/static/stylePage1.css
@@ -4,19 +4,21 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  height: 100%;
+
 }
 
 .chat .overlap-wrapper {
   background-color: #f0f0f0;
   overflow: hidden;
   width: 1440px;
-  height: 1024px;
+  height: 100vh;
 }
 
 .chat .overlap {
   position: relative;
-  width: 1652px;
-  height: 1111px;
+  width: 100%;
+  height: 100%;
   top: -36px;
   left: -58px;
 }
