--- a/frontend/pages/static/stylePage1.css
+++ b/frontend/pages/static/stylePage1.css
@@ -212,6 +212,8 @@
   top: 787px;
   left: 1280px;
   z-index: 12;
+  cursor: pointer; /* Changes cursor to indicate it's clickable */
+
 }
 
 .chat .fill {
@@ -221,6 +223,8 @@
   top: 787px;
   left: 1314px;
   z-index: 11;
+  cursor: pointer; /* Changes cursor to indicate it's clickable */
+
 }
 
 .chat .group {
@@ -440,4 +444,19 @@
   background-color: #333; /* Dark color for bot messages */
   align-self: flex-start; /* Align to the left */
   margin-left: 10px;
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  z-index: 13;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
