--- a/frontend/pages/static/styleSummary.css
+++ b/frontend/pages/static/styleSummary.css
@@ -280,14 +280,43 @@
   color: white; /* Text color for options */
 }
 
-.SUMMARY .rectangle-3 {
-  position: relative;
-  width: 918px;
-  height: 650px;
-  top: 132px;
-  left: 519px;
-  background-color: #a5b0d633;
-  border-radius: 25px;
-  backdrop-filter: blur(100px) brightness(100%);
-  -webkit-backdrop-filter: blur(100px) brightness(100%);
+  .SUMMARY .rectangle-3 {
+    position: relative;
+    width: 918px;
+    height: 650px;
+    top: 132px;
+    left: 519px;
+    background-color: #a5b0d633;
+    border-radius: 25px;
+    backdrop-filter: blur(100px) brightness(100%);
+    -webkit-backdrop-filter: blur(100px) brightness(100%);
+    padding: 20px;
+  }
+
+  .SUMMARY #rectangle-3-content {
+    font-size: 30px;
+    line-height: 1.5;
+    font-weight: 50;
+  }
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh; /* Adjust this as per your need */
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  animation: spin 2s linear infinite;
+  z-index: 13;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
